my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WDEPRECATED/WDEPRECATED.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WDEPRECATED.dml:9:1: In E
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WDEPRECATED.dml:11:5: warning WDEPRECATED: deprecation: stacked events are deprecated
